--- a/assets/cloudformation/ood.yml
+++ b/assets/cloudformation/ood.yml
@@ -71,12 +71,13 @@ Parameters:
     Default: local
     AllowedPattern: '[a-zA-Z0-9]+'
   WebsiteDomainName:
-    Description: Domain name for world facing website
+    Description: (Optional) Domain name for world facing website. If not provided, Route53 resources will not be created.
     Type: String
+    Default: ""
   HostedZoneId:
-    Description: Hosted Zone Id for Route53 Domain
+    Description: (Required if WebsiteDomainName is provided) Hosted Zone Id for Route53 Domain
     Type: String
-    AllowedPattern: '[a-zA-Z0-9]+'
+    Default: ""
   PortalAllowedIPCIDR:
     Description: IP CIDR for access to the Portal
     Default: 0.0.0.0/0
@@ -133,7 +134,9 @@ Parameters:
     Type: String
     AllowedValues:
       - "23.11.10"
-    Default: "23.11.10"
+      - "24.05.7" # PCluster 3.13
+      - "24.11.5" # PCS
+    Default: "24.05.7"
 
 #######################
 #     Conditions      #
@@ -142,6 +145,8 @@ Parameters:
 Conditions:
   CreateEFSFileSystem: !Equals [!Ref 'EFSFileSystemId', '']
   RetainStorage: !Equals [!Ref RetainEFSFileSystem, 'True']
+  HasWebsiteDomain: !Not [!Equals [!Ref 'WebsiteDomainName', '']]
+  UseHTTP: !Equals [!Ref 'WebsiteDomainName', '']
 
 #######################
 #     Reesources      #
@@ -150,6 +155,7 @@ Conditions:
 Resources:
   OODCertificate:
     Type: AWS::CertificateManager::Certificate
+    Condition: HasWebsiteDomain
     Properties:
       DomainName: !Ref WebsiteDomainName
       ValidationMethod: DNS
@@ -167,6 +173,14 @@ Resources:
           ToPort: 443
           IpProtocol: tcp
           Description: HTTPS Access
+        - !If 
+          - HasWebsiteDomain
+          - !Ref AWS::NoValue
+          - CidrIp: !Ref PortalAllowedIPCIDR
+            FromPort: 80
+            ToPort: 80
+            IpProtocol: tcp
+            Description: HTTP Access when no domain is provided
       SecurityGroupEgress:
         - Description: Remove default rule for egress
           CidrIp: 127.0.0.1/32
@@ -555,7 +569,10 @@ Resources:
                   export CLUSTER_CONFIG_BUCKET=${ClusterConfigBucket}
                   export SLURM_VERSION=${SlurmVersion}
                   export MUNGEKEY_SECRET_ID=${MungeKeySecret}
+                  export OOD_HTTP="${OOD_HTTP}"
                 - EFS_FileSystemId: !If [ CreateEFSFileSystem, !Ref SharedFileSystem, !Ref EFSFileSystemId ]
+                  WebsiteDomainName: !If [ HasWebsiteDomain, !Ref WebsiteDomainName, !GetAtt ALB.DNSName ]
+                  OOD_HTTP: !If [ UseHTTP, "true", "false" ]
               mode: "000744"
               owner: "root"
               group: "root"
@@ -666,7 +683,7 @@ Resources:
         Version: !GetAtt OpenOnDemandLaunchTemplate.LatestVersionNumber
       VPCZoneIdentifier: !Ref PrivateSubnets
       TargetGroupARNs:
-        - !Ref OpenOnDemandTargetGroupHTTPS
+        - !If [ HasWebsiteDomain, !Ref OpenOnDemandTargetGroupHTTPS, !Ref OpenOnDemandTargetGroupHTTP ]
       Tags:
         - Key: Name
           Value: !Sub OpenOnDemand Portal - ${AWS::StackName}-cfn-init
@@ -779,8 +796,23 @@ Resources:
       Matcher:
         HttpCode: 301
 
+  OpenOnDemandTargetGroupHTTP:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Condition: UseHTTP
+    Properties:
+      HealthCheckEnabled: true
+      HealthCheckIntervalSeconds: 6
+      HealthCheckTimeoutSeconds: 5
+      TargetType: instance
+      Protocol: HTTP
+      Port: 80
+      VpcId: !Ref VPC
+      Matcher:
+        HttpCode: 301
+
   OpenOnDemandListenerHTTPS:
     Type: AWS::ElasticLoadBalancingV2::Listener
+    Condition: HasWebsiteDomain
     Properties:
       DefaultActions:
         - Type: forward
@@ -791,6 +823,17 @@ Resources:
       Port: 443
       Protocol: "HTTPS"
       SslPolicy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
+      
+  OpenOnDemandListenerHTTP:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Condition: UseHTTP
+    Properties:
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref OpenOnDemandTargetGroupHTTP
+      LoadBalancerArn: !Ref ALB
+      Port: 80
+      Protocol: "HTTP"
 
   ClusterConfigBucket:
     Type: AWS::S3::Bucket
@@ -967,6 +1010,7 @@ Resources:
 
   DNSRecord:
     Type: AWS::Route53::RecordSet
+    Condition: HasWebsiteDomain
     Properties:
       HostedZoneId: !Ref HostedZoneId
       Name: !Ref WebsiteDomainName
@@ -1096,8 +1140,12 @@ Resources:
 
 Outputs:
   URL:
-    Description: URL
-    Value: !Sub http://${ALB.DNSName}
+    Description: Open OnDemand URL
+    Value:
+      !If
+        - HasWebsiteDomain
+        - !Sub "https://${WebsiteDomainName}"
+        - !Sub "http://${ALB.DNSName}"
   ClusterConfigBucket:
     Description: S3 Bucket where Cluster Configuration items are stored
     Value: !Ref ClusterConfigBucket
