--- a/assets/cloudformation/ood.yml
+++ b/assets/cloudformation/ood.yml
@@ -668,7 +668,9 @@ Resources:
 
             # Call cfn-init script to install files and packages
             /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource OpenOnDemandLaunchTemplate --region ${AWS::Region} --configset config
-
+            
+            # Signal the stack that the instance is ready
+            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource OODServerASG --region ${AWS::Region}
   OODServerASG:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
@@ -691,6 +693,9 @@ Resources:
         - Key: ood
           Value: !Sub webportal-${AWS::StackName}
           PropagateAtLaunch: true
+    CreationPolicy:
+      ResourceSignal:
+        Timeout: PT10M
     UpdatePolicy:
       AutoScalingRollingUpdate: {}
 
