--- a/assets/cloudformation/ood.yml
+++ b/assets/cloudformation/ood.yml
@@ -168,8 +168,17 @@ Resources:
         - HostedZoneId: !Ref HostedZoneId
           DomainName: !Ref WebsiteDomainName
 
+  #########################################################
+  # Security Groups
+  #########################################################
+
   ALBSecurityGroup:
     Type: AWS::EC2::SecurityGroup
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W36
+            reason: "Allow missing description"
     Properties:
       GroupDescription: Security Group for ALB
       SecurityGroupIngress:
@@ -470,6 +479,16 @@ Resources:
             Action:
               - cloudformation:DescribeStacks
             Resource: !Sub arn:${AWS::Partition}:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/*
+          - Effect: Allow
+            Sid: AllowAccessToPCSSecret
+            Action: 
+              - secretsmanager:GetSecretValue
+            Resource: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:pcs!*
+          - Effect: Allow
+            Sid: AllowAccessToPCS
+            Action: 
+              - pcs:GetCluster
+            Resource: !Sub arn:${AWS::Partition}:pcs:${AWS::Region}:${AWS::AccountId}:cluster/*
 
   OODInstanceRole:
     Type: AWS::IAM::Role
@@ -498,25 +517,6 @@ Resources:
       Path: /
       Roles:
         - !Ref OODInstanceRole
-
-  ALB:
-    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
-    Properties:
-      IpAddressType: ipv4
-      Scheme: internet-facing
-      SecurityGroups:
-        - !Ref ALBSecurityGroup
-      Subnets: !Ref PublicSubnets
-      Type: application
-      LoadBalancerAttributes:
-        - Key: access_logs.s3.enabled
-          Value: true
-        - Key: access_logs.s3.bucket
-          Value: !Ref LoadBalancerLogBucket
-        - Key: access_logs.s3.prefix
-          Value: portal-alb
-        - Key: idle_timeout.timeout_seconds # Required to address issue with OOD SSH timeout
-          Value: 600
 
   # Add a new secrets manager entry
   MungeKeySecret:
@@ -649,6 +649,7 @@ Resources:
               VolumeType: gp3
         SecurityGroupIds:
           - !Ref PortalSecurityGroup
+          - !Ref EfsClientSecurityGroup
         Monitoring:
           Enabled: true
         UserData:
@@ -709,42 +710,27 @@ Resources:
         PauseTime: PT15M
         WaitOnResourceSignals: true
 
-  ComputeNodeMountTargetEgress:
-    Type: AWS::EC2::SecurityGroupEgress
-    Properties:
-      IpProtocol: tcp
-      FromPort: 2049
-      ToPort: 2049
-      Description: Allows outbound to EFS mount target
-      GroupId: !GetAtt ComputeNodeSecurityGroup.GroupId
-      DestinationSecurityGroupId: !GetAtt MountTargetSecurityGroup.GroupId
+  #########################################################
+  # Shared File System
+  #########################################################
 
-  HeadNodeMountTargetEgress:
-    Type: AWS::EC2::SecurityGroupEgress
+  SharedFileSystem:
+    Condition: CreateEFSFileSystem
+    Type: AWS::EFS::FileSystem
+    DeletionPolicy: !If [ RetainStorage, Retain, Delete ]
+    UpdateReplacePolicy: !If [ RetainStorage, Retain, Delete ]
     Properties:
-      IpProtocol: tcp
-      FromPort: 2049
-      ToPort: 2049
-      Description: Allows outbound to EFS mount target
-      GroupId: !GetAtt HeadNodeSecurityGroup.GroupId
-      DestinationSecurityGroupId: !GetAtt MountTargetSecurityGroup.GroupId
-
-  PortalMountTargetEgress:
-    Type: AWS::EC2::SecurityGroupEgress
-    Properties:
-      IpProtocol: tcp
-      FromPort: 2049
-      ToPort: 2049
-      Description: Allows outbound to EFS mount target
-      GroupId: !GetAtt PortalSecurityGroup.GroupId
-      DestinationSecurityGroupId: !GetAtt MountTargetSecurityGroup.GroupId
+      FileSystemTags:
+        - Key: Name
+          Value: !Sub "${AWS::StackName}-efs"
+      Encrypted: true
+      PerformanceMode: generalPurpose
 
   MountTargetSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      VpcId:
-        Ref: VPC
-      GroupDescription: Security group for mount target
+      VpcId: !Ref VPC
+      GroupDescription: 'Allows traffic to EFS filesystem'
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 2049
@@ -773,14 +759,63 @@ Resources:
           ToPort: 2049
           DestinationSecurityGroupId: !GetAtt ComputeNodeSecurityGroup.GroupId
 
-  SharedFileSystem:
-    Condition: CreateEFSFileSystem
-    Type: AWS::EFS::FileSystem
-    DeletionPolicy: !If [ RetainStorage, Retain, Delete ]
-    UpdateReplacePolicy: !If [ RetainStorage, Retain, Delete ]
+  # Clients join this group for access to the EFS file system
+  EfsClientSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
     Properties:
-      Encrypted: true
-      PerformanceMode: generalPurpose
+      GroupDescription: 'Clients join this group for access to EFS filesystem'
+      GroupName: !Sub '${AWS::StackName}-efs-client-security-group'
+      VpcId: !Ref VPC
+
+  MountTargetSecurityGroupInboundRule:
+    Type: 'AWS::EC2::SecurityGroupIngress'
+    Properties:
+      IpProtocol: tcp
+      Description: Allow incoming traffic to EFS from members of security group
+      FromPort: 2049
+      ToPort: 2049
+      GroupId: !Ref MountTargetSecurityGroup
+      SourceSecurityGroupId: !Ref EfsClientSecurityGroup
+
+  EfsClientSecurityGroupOutboundRule:
+    Type: 'AWS::EC2::SecurityGroupEgress'
+    Properties:
+      IpProtocol: tcp
+      Description: Allow outgoing traffic from members of security group to EFS
+      FromPort: 2049
+      ToPort: 2049
+      GroupId: !Ref EfsClientSecurityGroup
+      DestinationSecurityGroupId: !Ref MountTargetSecurityGroup
+
+  ComputeNodeMountTargetOutboundRule:
+    Type: AWS::EC2::SecurityGroupEgress
+    Properties:
+      IpProtocol: tcp
+      FromPort: 2049
+      ToPort: 2049
+      Description: Allows outbound to EFS mount target
+      GroupId: !GetAtt ComputeNodeSecurityGroup.GroupId
+      DestinationSecurityGroupId: !GetAtt EfsClientSecurityGroup.GroupId
+
+  HeadNodeMountTargetOutboundRule:
+    Type: AWS::EC2::SecurityGroupEgress
+    Properties:
+      IpProtocol: tcp
+      FromPort: 2049
+      ToPort: 2049
+      Description: Allows outbound to EFS mount target
+      GroupId: !GetAtt HeadNodeSecurityGroup.GroupId
+      DestinationSecurityGroupId: !GetAtt EfsClientSecurityGroup.GroupId
+
+  PortalMountTargetOutboundRule:
+    Type: AWS::EC2::SecurityGroupEgress
+    Properties:
+      IpProtocol: tcp
+      FromPort: 2049
+      ToPort: 2049
+      Description: Allows outbound to EFS mount target
+      GroupId: !GetAtt PortalSecurityGroup.GroupId
+      DestinationSecurityGroupId: !GetAtt EfsClientSecurityGroup.GroupId
 
   MountTargetResource1:
     Type: AWS::EFS::MountTarget
@@ -797,6 +832,29 @@ Resources:
       SubnetId: !Select [1, !Ref PrivateSubnets]
       SecurityGroups:
         - !Ref MountTargetSecurityGroup
+
+  #########################################################
+  # Load Balancer
+  #########################################################
+
+  ALB:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties:
+      IpAddressType: ipv4
+      Scheme: internet-facing
+      SecurityGroups:
+        - !Ref ALBSecurityGroup
+      Subnets: !Ref PublicSubnets
+      Type: application
+      LoadBalancerAttributes:
+        - Key: access_logs.s3.enabled
+          Value: true
+        - Key: access_logs.s3.bucket
+          Value: !Ref LoadBalancerLogBucket
+        - Key: access_logs.s3.prefix
+          Value: portal-alb
+        - Key: idle_timeout.timeout_seconds # Required to address issue with OOD SSH timeout
+          Value: 600
 
   OpenOnDemandTargetGroupHTTPS:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
@@ -912,6 +970,10 @@ Resources:
             Action:
               - ssm:SendCommand
             Resource: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}::document/AWS-RunShellScript
+
+  #########################################################
+  # Event Bridge Rules
+  #########################################################
 
   ClusterConfigUpload:
     Type: AWS::Events::Rule
@@ -1193,6 +1255,12 @@ Outputs:
   EFSMountId:
     Description: EFS Mount ID
     Value: !If [ CreateEFSFileSystem, !Ref SharedFileSystem, !Ref EFSFileSystemId ]
+  EFSFileSystemArn:
+    Description: EFS File System ARN
+    Value: !If [ CreateEFSFileSystem, !GetAtt SharedFileSystem.Arn, !Ref EFSFileSystemArn ]
+  EfsClientSecurityGroup:
+    Description: EFS Client Security Group
+    Value: !Ref EfsClientSecurityGroup
   HeadNodeIAMPolicyArn:
     Description: Parallel Cluster Head Node IAM ARN
     Value: !Ref HeadNodeParallelClusterIAMPolicy
