feat: Adding additional s3 bucketsto s3 endpoint policy

--- a/assets/cloudformation/infra.yml
+++ b/assets/cloudformation/infra.yml
@@ -356,6 +356,9 @@ Resources:
               - !Sub arn:${AWS::Partition}:s3:::cloudformation-waitcondition-${AWS::Region}/*
               - !Sub arn:${AWS::Partition}:s3:::al2023-repos-${AWS::Region}-de612dc2/*
               - !Sub arn:${AWS::Partition}:s3:::fsx-lustre-client-repo/*
+              - !Sub arn:${AWS::Partition}:s3:::ec2-linux-nvidia-drivers/*
+              - !Sub arn:${AWS::Partition}:s3:::aws-pcs-repo-${AWS::Region}/*
+              - !Sub arn:${AWS::Partition}:s3:::aws-hpc-recipes/*
           - Effect: Allow # Allows access to buckets required for systems manager
             Principal: "*"
             Action: "s3:GetObject"
@@ -370,6 +373,8 @@ Resources:
               - !Sub arn:${AWS::Partition}:s3:::aws-patchmanager-macos-${AWS::Region}/*
               - !Sub arn:${AWS::Partition}:s3:::al2023-repos-${AWS::Region}-de612dc2/*
               - !Sub arn:${AWS::Partition}:s3:::fsx-lustre-client-repo/*
+              - !Sub arn:${AWS::Partition}:s3:::ec2-linux-nvidia-drivers/*
+              - !Sub arn:${AWS::Partition}:s3:::aws-pcs-repo-${AWS::Region}/*
 
   ADAdministratorSecret:
     Type: AWS::SecretsManager::Secret
