--- a/assets/cloudformation/ood.yml
+++ b/assets/cloudformation/ood.yml
@@ -437,6 +437,7 @@ Resources:
           - !Sub '"ClusterConfigBucket": "${ClusterConfigBucket}",'
           - !Sub '"DomainName": "${DomainName}"'
           - '}'
+      KmsKeyId: alias/aws/secretsmanager
 
   OODInstanceManagedPolicy:
     Type: AWS::IAM::ManagedPolicy
@@ -524,7 +525,7 @@ Resources:
               - Effect: Allow
                 Action: 
                   - pcs:GetCluster
-                Resource: !Sub arn:${AWS::Partition}:pcs:${AWS::Region}:${AWS::AccountId}:cluster/*
+                Resource: !Sub arn:${AWS::Partition}:pcs:${AWS::Region}:${AWS::AccountId}:cluster/*        
       Tags:
         - Key: Name
           Value: !Sub '${AWS::StackName} - OpenOnDemand IAM Role'
@@ -543,6 +544,7 @@ Resources:
     Properties:
       Description: Munge Key for Open OnDemand
       Name: !Sub [ "MungeKey-${StackIdSuffix}", { StackIdSuffix: !Select [ 1, !Split [ '/', !Ref 'AWS::StackId' ] ] } ]
+      KmsKeyId: alias/aws/secretsmanager
 
   OpenOnDemandLaunchTemplate:
     Type: AWS::EC2::LaunchTemplate
@@ -869,6 +871,8 @@ Resources:
       Subnets: !Ref PublicSubnets
       Type: application
       LoadBalancerAttributes:
+        - Key: routing.http.drop_invalid_header_fields.enabled
+          Value: true
         - Key: access_logs.s3.enabled
           Value: true
         - Key: access_logs.s3.bucket
@@ -877,6 +881,9 @@ Resources:
           Value: portal-alb
         - Key: idle_timeout.timeout_seconds # Required to address issue with OOD SSH timeout
           Value: 600
+        - Key: deletion_protection.enabled # Required to address issue with OOD SSH timeout
+          Value: true
+          
 
   OpenOnDemandTargetGroupHTTPS:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
