--- a/assets/cloudformation/ood.yml
+++ b/assets/cloudformation/ood.yml
@@ -710,6 +710,7 @@ Resources:
       MinSize: "1"
       MaxSize: "1"
       DesiredCapacity: "1"
+      HealthCheckType: EC2
       HealthCheckGracePeriod: 240
       MetricsCollection:
         - Granularity: 1Minute
@@ -749,6 +750,8 @@ Resources:
           Value: !Sub "${AWS::StackName}-efs"
       Encrypted: true
       PerformanceMode: generalPurpose
+      BackupPolicy:
+        Status: ENABLED
 
   MountTargetSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -873,6 +876,8 @@ Resources:
       LoadBalancerAttributes:
         - Key: routing.http.drop_invalid_header_fields.enabled
           Value: true
+        - Key: deletion_protection.enabled # Required to address issue with OOD SSH timeout
+          Value: true
         - Key: access_logs.s3.enabled
           Value: true
         - Key: access_logs.s3.bucket
@@ -881,8 +886,6 @@ Resources:
           Value: portal-alb
         - Key: idle_timeout.timeout_seconds # Required to address issue with OOD SSH timeout
           Value: 600
-        - Key: deletion_protection.enabled # Required to address issue with OOD SSH timeout
-          Value: true
           
 
   OpenOnDemandTargetGroupHTTPS:
@@ -953,6 +956,8 @@ Resources:
       NotificationConfiguration:
         EventBridgeConfiguration:
           EventBridgeEnabled: true
+      ObjectLockEnabled: false
+      
 
   ClusterConfigBucketPolicy:
     Type: AWS::S3::BucketPolicy
